@@ -365,9 +365,31 @@ with <code>&lt;uptodate&gt;</code> and <code>&lt;junit&gt;</code> output.</p>
     <td valign="top">ignored</td>
   </tr>
 </table>
+<h4><a name="unpackage-mapper">unpackage (since ant 1.6)</a></h4>
+  <p>This mapper is the inverse of the <a href="#package-mapper">package</a> mapper.
+    It replaces the dots in a package name with directory separators. This
+    is useful for matching XML formatter results against their JUnit test
+    test cases. The mapper shares the sample syntax
+    as the <a href="#glob-mapper">glob mapper</a>.
+  </p>
+<b>Example:</b>
+<blockquote><pre>
+&lt;mapper type="unpackage"
+        from="TEST-*Test.xml" to="${test.src.dir}/*Test.java"&gt;
+</pre></blockquote>
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Source file name</b></td>
+    <td valign="top"><b>Target file name</b></td>
+  </tr>
+  <tr>
+    <td valign="top"><code>TEST-org.acme.AcmeTest.xml</code></td>
+    <td valign="top"><code>${test.src.dir}/org/acme/AcmeTest.java</code></td>
+  </tr>
+</table>
 
 <hr>
-<p align="center">Copyright &copy; 2000-2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2000-2003 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
